--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <a href="javascript:void(0)" class="submenu-link">Buku</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">HAKI</a>
+                    <a href="javascript:void(0)" class="submenu-link">Hak Kekayaan Intelektual</a>
                   </li>
                   <li class="submenu-item">
                     <a href="javascript:void(0)" class="submenu-link">Karya Ilmiah</a>
@@ -207,7 +207,7 @@
                     <a href="javascript:void(0)" class="submenu-link">Olahraga</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">ORMAWA</a>
+                    <a href="javascript:void(0)" class="submenu-link">Organisasi Mahasiswa</a>
                   </li>
                   <li class="submenu-item">
                     <a href="javascript:void(0)" class="submenu-link">Pelatihan</a>
