--- a/pages/portofolio-kegiatan.html
+++ b/pages/portofolio-kegiatan.html
@@ -18,19 +18,21 @@
             </div>
             <a href="javascript:void(0)" class="w-auto btn btn-primary rounded-3"><i class="bi bi-plus-lg"></i> <span class="d-none d-sm-inline">Tambah Ajuan</span></a>
           </div>
-          <div class="row">
+          <div class="row equal-height-row">
             {{#each portofolioKegiatan}}
-            <div data-status="{{status}}" class="item col-sm-4 col-12 mb-0 mb-sm-3">
-              <div class="card shadow rounded-3">
-                <div class="d-flex py-3 px-4">
+            <div data-status="{{status}}" class="item col-sm-4 col-12 mb-3 mb-sm-0">
+              <div class="card shadow rounded-3 border" style="height: 12.5rem;">
+                <div class="d-flex py-3 px-4 h-100">
                   <img src="assets/item.png" alt="Icon Item" width="50" height="50" class="me-3">
-                  <div class="d-flex flex-column align-items-start">
-                    <h6 class="mb-1">{{judul}}</h6>
-                    <small class="mb-1">Jenis Kegiatan: {{jenis}}</small>
-                    <small class="mb-1">{{lokasi}} &bullet; {{tahun}}</small>
-                    <span class="bg-{{warna}} bg-opacity-10 px-3 fw-semibold rounded-1 mb-3">
-                      <small class="text-{{warna}}">{{status}}</small>
-                    </span>
+                  <div class="d-flex flex-column justify-content-between align-items-start">
+                    <div class="d-flex flex-column align-items-start">
+                      <h6 class="mb-1">{{judul}}</h6>
+                      <small class="mb-2">Jenis Kegiatan: {{jenis}}</small>
+                      <small class="mb-2">{{lokasi}} &bullet; {{tahun}}</small>
+                      <span class="bg-{{warna}} bg-opacity-10 px-3 fw-semibold rounded-1 mb-3">
+                        <small class="text-{{warna}}">{{status}}</small>
+                      </span>
+                    </div>
                     <a href="{{#if tautan}}{{tautan}}{{^}}javascript:void(0) {{/if}}" class="{{#if tautan}} navBtn {{^}}  {{/if}} w-100 px-4 py-0 fw-bold btn btn-outline-primary rounded-2">Lihat Detail</a>
                   </div>
                 </div>
