--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Berkas Saya</a>
+                    <a href="#berkas-saya" class="navBtn submenu-link">Berkas Saya</a>
                   </li>
                 </ul>
               </li>
