finall revisi fix fix

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           </div>
         </div>
       </div>
-      <div id="main" class="pt-5">
+      <div id="main" class="pt-5 position-relative">
         <div id="content" class="mt-4"></div>
         <div id="footer"></div>
       </div>
