--- a/pages/tambah-ajuan-kompetisi.html
+++ b/pages/tambah-ajuan-kompetisi.html
@@ -180,8 +180,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
-                    <button type="button" class="btn btn-primary" id="simpanAjuan" data-bs-dismiss="modal">Ya, Simpan</button>
-                    <!-- <a href="index.html" class="btn btn-primary" id="simpanAjuan">Ya, Simpan</a> -->
+                    <a href="#detail-kompetisi" class="navBtn btn btn-primary" data-bs-dismiss="modal">Ya, Simpan</a>
                   </div>
                 </div>
               </div>
