--- a/pages/detail-kompetisi.html
+++ b/pages/detail-kompetisi.html
@@ -187,7 +187,7 @@
             <div class="d-flex justify-content-between align-items-start mb-3">
               <span class="fw-semibold">Foto Penyerahan Penghargaan</span>
               <div class="dropdown">
-                <button class="dropdown-toggle btn btn-outline-primary py-0 fw-bold border border-2 border-primary rounded-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="dropdown-toggle btn btn-outline-primary py-0 fw-bold border border-2 border-primary rounded-3" type="button" data-bs-toggle="dropdown">
                   <i class="bi bi-paperclip"></i>
                   <span class="d-none d-sm-inline">Lampirkan Berkas</span>
                 </button>
