--- a/pages/detail-kompetisi.html
+++ b/pages/detail-kompetisi.html
@@ -463,9 +463,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="cariBerkas">
-          <label for="cariBerkas">Cari Berkas</label>
+        <div class="mb-3">
+          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -522,9 +521,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="cariBerkas">
-          <label for="cariBerkas">Cari Berkas</label>
+        <div class="mb-3">
+          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -567,9 +565,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="cariBerkas">
-          <label for="cariBerkas">Cari Berkas</label>
+        <div class="mb-3">
+          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -641,9 +638,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="cariBerkas">
-          <label for="cariBerkas">Cari Berkas</label>
+        <div class="mb-3">
+          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -686,9 +682,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="cariBerkas">
-          <label for="cariBerkas">Cari Berkas</label>
+        <div class="mb-3">
+          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
         </div>
       </div>
       <div class="modal-footer d-flex justify-content-between">
