--- a/pages/detail-kompetisi.html
+++ b/pages/detail-kompetisi.html
@@ -463,8 +463,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
+        <div class="input-group mb-3">
+          <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
+          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -521,8 +522,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
+        <div class="input-group mb-3">
+          <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
+          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -565,8 +567,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
+        <div class="input-group mb-3">
+          <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
+          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -638,8 +641,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
+        <div class="input-group mb-3">
+          <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
+          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -682,8 +686,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <input type="email" class="form-control py-3" placeholder="Cari Berkas">
+        <div class="input-group mb-3">
+          <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
+          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
         </div>
       </div>
       <div class="modal-footer d-flex justify-content-between">
