aljnisu hfiusyf usf

--- a/pages/detail-kompetisi.html
+++ b/pages/detail-kompetisi.html
@@ -465,7 +465,7 @@
       <div class="modal-body">
         <div class="input-group mb-3">
           <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
-          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
+          <input type="text" class="form-control py-3 ps-2" placeholder="Cari Berkas" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -524,7 +524,7 @@
       <div class="modal-body">
         <div class="input-group mb-3">
           <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
-          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
+          <input type="text" class="form-control py-3 ps-2" placeholder="Cari Berkas" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -569,7 +569,7 @@
       <div class="modal-body">
         <div class="input-group mb-3">
           <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
-          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
+          <input type="text" class="form-control py-3 ps-2" placeholder="Cari Berkas" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -643,7 +643,7 @@
       <div class="modal-body">
         <div class="input-group mb-3">
           <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
-          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
+          <input type="text" class="form-control py-3 ps-2" placeholder="Cari Berkas" style="border-left: none;">
         </div>
         <div class="row">
           <div class="col-sm-4 col-12 mb-3">
@@ -688,7 +688,7 @@
       <div class="modal-body">
         <div class="input-group mb-3">
           <span class="input-group-text pe-0" style="background-color: #ffffff00;"><i class="bi bi-search mb-2"></i></span>
-          <input type="text" class="form-control py-3 ps-2" placeholder="Search" style="border-left: none;">
+          <input type="text" class="form-control py-3 ps-2" placeholder="Cari Berkas" style="border-left: none;">
         </div>
       </div>
       <div class="modal-footer d-flex justify-content-between">
