--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
           </div>
         </div>
       </div>
-      <div id="main" class="pt-5 position-relative">
-        <div id="content" class="mt-4"></div>
+      <div id="main" class="pt-5">
+        <div id="content" class="mt-4 position-relative"></div>
         <div id="footer"></div>
       </div>
     </div>
