--- a/pages/detail-kompetisi.html
+++ b/pages/detail-kompetisi.html
@@ -1,6 +1,9 @@
-<div class="d-flex justify-content-center w-100" style="position: fixed; bottom: 25px; z-index: 100;">
-  <div class="d-flex justify-content-between align-items-center bg-white p-3 border shadow rounded-4">
-    <h6 class="me-4 mb-0">Portofolio sudah lengkap, teliti lagi sebelum diajukan</h6>
+<div class="d-flex justify-content-center w-100" style="position: fixed; bottom: 25px; right: 0; z-index: 100; padding-left: 300px;">
+  <div class="d-flex justify-content-between align-items-center bg-white p-3 border shadow rounded-4 w-75">
+    <div class="d-flex align-items-center h-100">
+      <div class="bg-success rounded-3 me-3" style="width: 8px; height: 100%;"></div>
+      <h6 class="me-4 mb-0">Portofolio sudah lengkap, teliti lagi sebelum diajukan</h6>
+    </div>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#konfirmasiPortofolio">Ajukan</button>
   </div>
 </div>
